# foundry

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FOUNDRY_HOSTED_OPEN_SOURCE_LAUNCH_PLAN.md  FOUNDRY_ORCHESTRATOR_MIGRATION_ARCHIVE_RELEASE_PLAN_2026-03-12.md  FOUNDRY_SUPERVISOR_RUNTIME_BRIDGE_PLAN_2026-03-12.md  FOUNDRY_ZULIP_DESKTOP_PARITY_PLAN.md  LICENSING.md  README.md  SECURITY.md  SUPPORT.md  biome.json  eslint.config.mjs  package.json  turbo.json
.githooks/: pre-push
.github/: CODEOWNERS  dependabot.yml  (+1 more)
services/foundry-server/: .env.example  README.md  pyproject.toml
services/foundry-server/scripts/: seed_demo_company.py
services/foundry-server/src/foundry_server/: __init__.py  app.py  coder_client.py  coder_provisioner_manager.py  coder_template_publisher.py  config.py  core_client.py  decisions.py  github_app.py  inbox_secretary.py  local_auth.py  store.py
services/foundry-server/src/foundry_server/domain/: __init__.py  billing.py  github.py  organizations.py  provisioning.py  runtime.py  users.py  workspace.py
services/foundry-server/src/foundry_server/orchestration/: Dockerfile  __init__.py  app.py  executor.py  orchestrator_policy.py  orchestrator_policy.yaml  repo_management_mcp.py  store.py  validate_codex_oauth_backend.py  validate_local_execution_backend.py  validate_repo_access.py  validate_supervisor_conversational_flow.py
services/foundry-server/src/foundry_server/orchestration/supervisor_runtime/: memory.py  paths.py
services/foundry-server/src/foundry_server/templates/: accept_invitation.html  cloud_app.html  dashboard.html  layout.html  login.html  organization_detail.html  signup.html
services/foundry-server/tests/: test_cloud_auth.py  test_config.py  test_control_plane.py  test_decisions.py  test_github_app.py  test_inbox_secretary.py  test_orchestration_mount.py
(+210 files in other folders)
