[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foundry-server"
version = "0.1.0"
description = "Product-facing Foundry server scaffold."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116,<0.117",
  "httpx>=0.28,<0.29",
  "PyJWT[crypto]>=2.10,<2.11",
  "uvicorn[standard]>=0.35,<0.36",
]

[tool.setuptools.packages.find]
where = ["src"]
